--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -116,4 +116,19 @@ main {
     background-color: rgb(158, 224, 157);
     color: #fff;
 }
+
+.user-message {
+    margin: auto;
+    width: 90%;
+    border: 1px solid #4771fa;
+    padding: 1rem;
+    border-radius: 3px;
+    background-color: #b9c9ff;
+    text-align: center;
+}
+
+.user-message--error {
+    border-color: #ff0000;
+    background-color: rgb(255, 176, 176);
+}
   
