--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -7,6 +7,7 @@ block styles
 block content
     main
         form.product-form(action=editing ? '/admin/edit-product' : '/admin/add-product', method="POST")
+            input(type="hidden", name="_csrf", value=csrfToken)
             .form-control
                 label(for="title") Title
                 input(type="text", name="title", id="title" value=editing ? product.title : '')
