--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -27,6 +27,7 @@ html(lang="en")
                     if isLogged
                         li.main-header__item
                             form(action="/logout" method="POST")
+                                input(type="hidden", name="_csrf", value=csrfToken)
                                 button(type="submit") Log Out
                     else
                         li.main-header__item
