--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -15,6 +15,7 @@ block content
                             input(type="hidden", value=p.product._id, name="productId")
                             button(type="submit", class="btn delete-btn") Delete
             form.order-now(action="/create-order", method="POST")
+                input(type="hidden", name="_csrf", value=csrfToken)
                 button.btn(type="submit") Order Now
         else
             h1 No Products in Cart
