--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -16,6 +16,7 @@ block content
                 p #{product.description}
                 if isLogged
                     form(action="/cart" method="POST")
+                        input(type="hidden", name="_csrf", value=csrfToken)
                         button.btn(type="submit") Add To Cart
                         input(type="hidden" name="productId" value=product._id)
         
